2016-11-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	  src/SDCCloop.c,
	  src/SDCCopt.c,
	  src/port.h,
	  src/*/main.c:
	  Replace all muldiv uses by hasNativeMulFor().

2016-10-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2554.c:
	  Fix a stack corruption issue in stm8 ! code generation, bug #2554.

2016-10-23 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkbank.c
	* sdas/linksrc/lksym.c
          Fix a buffer overflow error in revision #9786.

2016-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/*.c,
	  support/regression/ports/*/spec.mk:
	  Cleanup handling of __reentrant in the regression tests, RFE #517.

2016-10-22 Ben Shi <powerstudio1st AT 163 DOT com>

        * sdas/linksrc/lksym.c
          Fix a buffer overflow error in previous commit.

2016-10-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCBBlock.c,
	  src/SDCClabel.c:
	  Fix a bug in BBlock label handling, allows reenabling jump-to-jump optimization for jump tables.

2016-10-17 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lkbank.c
	  Fix bug #2549.

2016-10-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClabel.c:
	  Temporarily disable jump-to-jump optimization for jump tables RFE #514, since it causes a hc08/z80 regression.

2016-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCcse.c:
	  Optimize out negation by inverting jump condition, part of RFE #516.

2016-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClabel.c,
	  src/SDCCset.h,
	  src/SDCCset.c:
	  Implement jump-to-jump optimization for jump tables RFE #514.
	* src/SDCCcse.c:
	  Optimize bitwise and of _Bool and comparison results, RFE #513.

2016-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (shiftLLong): support sizes 1,2,4,8,
	  refactored genlshOne, genlshTwo, genlshFour into genlshFixed,
	  (genLeftShiftLiteral): support long long
