@@ -10,7 +10,6 @@
 
 #include <stdbool.h>
 
-#ifndef __SDCC_WEIRD_BOOL
 struct a
 {
 	bool a : 1;
@@ -20,7 +19,6 @@ void f(struct a *s)
 {
 	1 && s->a;	// Compilation failed: Logical op with bitfield boolean.
 }
-#endif
 
 void testBug(void)
 {
